# mood-compass

./: .biomeignore  .env  biome.json  debug.html  eslint.config.js  knip.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.changeset/: README.md
.kilocode/: mcp.json
proto/: settings.proto
schema/: settings.schema.json
server/: index.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: agent_manager.rs  config.rs  config_manager.rs  lib.rs  main.rs  proto.rs
src/app/: state.ts
src/components/: NavLink.tsx  add-agent-dialog.tsx  agent-config-manager.tsx  edit-agent-dialog.tsx  mermaid-block.tsx
src/components/chat/: ToolMessage.tsx  index.ts  message-part.tsx  message-spinner.tsx  message.tsx  tool-header.tsx  types.ts
src/components/loader/: Loader.tsx  index.ts
src/components/ui/: accordion.tsx  alert-dialog.tsx  avatar.tsx  breadcrumb.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  radio-group.tsx  resizable.tsx  (+14 more)
src/hooks/: use-toast.ts
src/lib/: chat-context.tsx  config-manager.ts  deferred.ts  is-relative-url.ts  proto-settings.ts  use-local-storage-value.ts
src/messages/: data-parts.ts  metadata.ts
src/pages/: Index.tsx  NotFound.tsx
src/tools/: get-rich-error.ts  index.ts  run-modal-workflow.md  run-modal-workflow.ts
supabase/: config.toml
test-results/: .last-run.json
tests/: basic.spec.ts
(+2 files in other folders)
