[package]
name = "mood-compass"
version = "0.1.0"
description = "Mood Compass Desktop App"
authors = ["Developer"]
edition = "2021"

[lib]
name = "mood_compass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
notify = "7.0"
indexmap = { version = "2", features = ["serde"] }
dirs = "5.0"
prost = "0.13"
bytes = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
